<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginTop="50dp"
    android:padding="35dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_child_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@color/teal_300"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/personal_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/personal_account"
        android:textSize="20sp"
        android:layout_marginTop="27dp"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/surname_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/surname_child"
        android:textSize="20sp"
        android:layout_marginTop="51dp"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/name_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/name_child"
        android:textSize="20sp"
        android:layout_marginTop="75dp"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/patronymic_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:hint="@string/patronymic_child"
        android:textSize="20sp"
        android:layout_marginTop="99dp"
        android:paddingLeft="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/add_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_to"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:background="@drawable/btn_sign_in"/>

        <Button
            android:id="@+id/cancellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancellation"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:background="@drawable/btn_sign_in"/>

    </LinearLayout>



</RelativeLayout>