<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/view">

    <include
        layout="@layout/appbar_educator"/>

    <TableLayout
        android:id="@+id/table_children"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/tablelayout_border">

        <TableRow
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:gravity="center"
                android:background="@drawable/edittext_border_2"
                />

            <TextView
                android:id="@+id/fio_child"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/fio_child"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:gravity="center"
                android:background="@drawable/edittext_border_2"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/number_lc"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:gravity="center"
                android:background="@drawable/edittext_border_2"/>

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/black"
                android:textSize="8sp"
                android:gravity="center"
                android:background="@drawable/edittext_border_2"/>

            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:gravity="center"
                android:background="@drawable/edittext_border_2"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>